# investing-portfolio-backend

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/apps/portfolio/: apps.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
