[project]
name = "investing-portfolio-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "lasouski"}
]
readme = "README.md"
requires-python = "3.11.7"
dependencies = [
    "django (==5.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
