[project]
name = "investing-portfolio-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "lasouski"}
]
readme = "README.md"
requires-python = "3.11.7"
dependencies = [
    "django (==5.0.6)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
skip-string-normalization = false
exclude = '''
/(
    \.venv
  | migrations
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
